--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ iniconfig==1.1.1
 jwt==1.3.1
 packaging==21.3
 pluggy==1.0.0
+psycopg==3.0.14
 py==1.11.0
 pycparser==2.21
 PyJWT==2.4.0
@@ -25,6 +26,7 @@ pyparsing==3.0.9
 pytest==7.1.2
 pytest-django==4.5.2
 python-dateutil==2.8.2
+python-decouple==3.6
 pytz==2022.1
 requests==2.27.1
 six==1.16.0
