--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ cffi==1.15.0
 charset-normalizer==2.0.12
 cryptography==37.0.2
 dj-database-url==0.5.0
-Django==4.0.4
+Django
 django-extensions==3.1.5
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
