--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ dj-database-url==0.5.0
 Django
 django-extensions==3.1.5
 djangorestframework==3.13.1
-djangorestframework-simplejwt==5.1.0
+djangorestframework-simplejwt
 factory-boy==3.2.1
 Faker==13.11.1
 gunicorn==20.1.0
