--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ py==1.11.0
 pycparser==2.21
 PyJWT==2.4.0
 pyparsing==3.0.9
-pytest==7.1.2
+pytest
 pytest-django==4.5.2
 python-dateutil==2.8.2
 python-decouple==3.6
