--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-asgiref
+asgiref==3.5.2
 attrs==21.4.0
 backports.zoneinfo==0.2.1
 certifi==2022.5.18
@@ -6,10 +6,10 @@ cffi==1.15.0
 charset-normalizer==2.0.12
 cryptography==37.0.2
 dj-database-url==0.5.0
-Django
+Django==4.0.4
 django-extensions==3.1.5
 djangorestframework==3.13.1
-djangorestframework-simplejwt
+djangorestframework-simplejwt==5.1.0
 factory-boy==3.2.1
 Faker==13.11.1
 gunicorn==20.1.0
@@ -23,7 +23,7 @@ py==1.11.0
 pycparser==2.21
 PyJWT==2.4.0
 pyparsing==3.0.9
-pytest
+pytest==7.1.2
 pytest-django==4.5.2
 python-dateutil==2.8.2
 python-decouple==3.6
@@ -31,6 +31,6 @@ pytz==2022.1
 requests==2.27.1
 six==1.16.0
 sqlparse==0.4.2
-tomli
-urllib3
-whitenoise
+tomli==2.0.1
+urllib3==1.26.9
+whitenoise==6.1.0
